--- a/Project.toml
+++ b/Project.toml
@@ -1,9 +1,10 @@
 name = "PlayGround"
 uuid = "f9107607-1e24-4002-bf97-316225ed4b9c"
 authors = ["Xijiang Yu <xijiang@users.noreply.github.com>"]
-version = "0.1.2"
+version = "0.1.3"
 
 [deps]
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
